criação de rota nos 5 filmes

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,12 +8,48 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-item routerLink="/bela-e-a-fera" >
-    <ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/9V4wl4rnUcLfGuTe4J5NjOFbDil.jpg">
-      </ion-thumbnail>
-      Bela e a Fera
-    </ion-label>
-  </ion-item>
+
+
+
+
+
+      <ion-list>
+
+
+
+        <ion-item routerLink="/bela-e-a-fera">
+              <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/9V4wl4rnUcLfGuTe4J5NjOFbDil.jpg">
+              ion-item in a card, icon left, button right
+        </ion-item>
+
+        <ion-item routerLink="/branca-de-neve">
+          <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/5l0dsoLXP2eifLQ0lFCYNC5Lcv0.jpg">
+          ion-item in a card, icon left, button right
+        </ion-item>
+
+        <ion-item routerLink="/cinderelaion">
+          <img src="https://www.themoviedb.org/t/p/w30io0_and_h450_bestv2/Acj5mmoZQ5lKLNpU2y0XQCt5rNb.jpg">
+          ion-item in a card, icon left, button right
+        </ion-item>
+
+        <ion-item routerLink="/bela-e-a-fera">
+          <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/iRYRBWKhwPI5lBT4DPhmNpmBOMU.jpg">
+          ion-item in a card, icon left, button right
+        </ion-item>
+
+        <ion-item routerLink="/bela-e-a-fera">
+          <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/qW6uvSFzHIJm9Y8ZfFuTl71HxMh.jpg">
+          ion-item in a card, icon left, button right
+        </ion-item>
+
+        <ion-item routerLink="/bela-e-a-fera">
+          <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/oakAd8syy7jNQ4ZoaAGCQkTqcOV.jpg">
+          ion-item in a card, icon left, button right
+        </ion-item>
+
+      </ion-list>
+
+
+
+
 </ion-content>
