--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,50 +1,43 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Pagina Inicial
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
 
-
-
-
-
-
       <ion-list>
-
-
 
         <ion-item routerLink="/bela-e-a-fera">
               <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/9V4wl4rnUcLfGuTe4J5NjOFbDil.jpg">
-              ion-item in a card, icon left, button right
+              <h2>A Bela e a Fera</h2>
         </ion-item>
 
         <ion-item routerLink="/branca-de-neve">
           <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/5l0dsoLXP2eifLQ0lFCYNC5Lcv0.jpg">
-          ion-item in a card, icon left, button right
+          <h2>Branca de Neve</h2>
         </ion-item>
 
-        <ion-item routerLink="/cinderelaion">
-          <img src="https://www.themoviedb.org/t/p/w30io0_and_h450_bestv2/Acj5mmoZQ5lKLNpU2y0XQCt5rNb.jpg">
-          ion-item in a card, icon left, button right
+        <ion-item routerLink="/cinderela">
+          <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/Acj5mmoZQ5lKLNpU2y0XQCt5rNb.jpg">
+          <h2>Cinderela</h2>
         </ion-item>
 
-        <ion-item routerLink="/bela-e-a-fera">
+        <ion-item routerLink="/bela-adormecida">
           <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/iRYRBWKhwPI5lBT4DPhmNpmBOMU.jpg">
-          ion-item in a card, icon left, button right
+          <h2>Bela Adormecida</h2>
         </ion-item>
 
-        <ion-item routerLink="/bela-e-a-fera">
+        <ion-item routerLink="/pequena-sereia">
           <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/qW6uvSFzHIJm9Y8ZfFuTl71HxMh.jpg">
-          ion-item in a card, icon left, button right
+          <h2>A Pequena Sereia</h2>
         </ion-item>
 
-        <ion-item routerLink="/bela-e-a-fera">
+        <ion-item routerLink="/aladdin">
           <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/oakAd8syy7jNQ4ZoaAGCQkTqcOV.jpg">
-          ion-item in a card, icon left, button right
+          <h2>Aladdin</h2>
         </ion-item>
 
       </ion-list>
