--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,8 +6,12 @@ ion-item {
     width: 220px;
   }
 
-ion-label{
-  text-align: center;
+h2{
+
+  font-family:"Impact", "fantasy";
+  color: rgb(17, 107, 107);
+
 }
+
 
 }
