--- a/src/app/bela-e-a-fera/bela-e-a-fera.page.html
+++ b/src/app/bela-e-a-fera/bela-e-a-fera.page.html
@@ -1,9 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>bela_e_a_fera</ion-title>
+    <ion-title>A Bela e a Fera</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-card>
+
+
+    <img
+        src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/9V4wl4rnUcLfGuTe4J5NjOFbDil.jpg"
+      />
+
+
+    <ion-card-header>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Card Title</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+    </ion-card-content>
+  </ion-card>
+
+
 
 </ion-content>
